--- a/views/footer.twig
+++ b/views/footer.twig
@@ -1,1 +1,52 @@
-Copyright {{"now"|date('Y')}}
+<footer>
+    <div class="wrapper">
+        <div class="menu_cont mb-12">
+            <nav id="nav-footer" class="nav-footer" role="navigation">
+                {% include "menu.twig" with {'items': footer_menu.get_items, 'menu': true } %}
+            </nav>
+        </div>
+        <div class="grid grid-cols-2 gap-4">
+            <div class="flex flex-col gap-4">
+                <div class="embl_cont">
+                    <a href="{{site.url}}" title="На главную страницу">
+                        <img src="{{ theme.link  ~ "/static/emblem_white.svg" }}" class="emblem" width="208" height="58" alt="Логотип Leader Dance" title="Логотип Leader Dance" />
+                    </a>
+                    <div class="sub_title">
+                        Танцевальный<br />центр
+                    </div>
+                </div>
+                <div class="vcard hcard">
+                    <div class="hidden fn org">{{ site.name }}</div>
+                    <a href="{{ site.option('vcard_setting_vk') }}" class="contact square vk">
+                        <img src="{{ theme.link ~ "/static/vk.svg" }}" alt="Вконтакте" width="40" height="40">
+                    </a>
+                    <a href="{{ site.option('vcard_setting_ok') }}" class="contact square ok">
+                        <img src="{{ theme.link ~ "/static/ok.svg" }}" alt="Вконтакте" width="40" height="40">
+                    </a>
+                    <a href="{{ site.option('vcard_setting_yt') }}" class="contact square yt">
+                        <img src="{{ theme.link ~ "/static/yt.svg" }}" alt="Вконтакте" width="40" height="40">
+                    </a>
+                    <a href="tel:{{ site.option('vcard_setting_tel') }}" class="contact string yt">
+                        <img src="{{ theme.link ~ "/static/ph.svg" }}" alt="Вконтакте" width="40" height="40">Позвоните нам
+                    </a>
+                </div>
+            </div>
+            <div class="flex flex-col gap-4">
+                <p>
+                    Вся представленная на сайте информация носит информационный характер и не является публичной офертой. Любое использование материалов сайта возможно только с письменного согласия ИП Гливенко Дениса Сергеевича
+                </p>
+                <p>
+                    <a href="{{ site.url }}/privacy-policy/">
+                        Политика конфиденциальности и обработки персональных данных
+                    </a>
+                </p>
+                <p>
+                    2007-{{"now"|date('Y')}} © Танцевальный центр «Leader Dance» Астрахань
+                </p>
+                <p>
+                    Разработка: <a href="https://shibitov.ru/" target="_blank">JSH</a>
+                </p>
+            </div>
+        </div>
+    </div>
+</footer>
