--- a/views/partial/pagination.twig
+++ b/views/partial/pagination.twig
@@ -2,25 +2,14 @@
     <nav class="pagination-block">
         <ul class="pagination">
 
-            {# First #}
-            {% if posts.pagination.pages|first and posts.pagination.pages|first.current != true %}
-                <li class="first btn">
-                    <a href="{{ posts.pagination.pages|first.link }}">First</a>
-                </li>
-            {% else %}
-                <li class="first btn disabled">
-                    <button disabled>First</button>
-                </li>
-            {% endif %}
-
             {# Previous #}
             {% if posts.pagination.prev %}
                 <li class="prev btn">
-                    <a href="{{ posts.pagination.prev.link }}">Previous</a>
+                    <a href="{{ posts.pagination.prev.link }}">« Предыдущая</a>
                 </li>
             {% else %}
                 <li class="prev btn disabled">
-                    <button disabled>Previous</button>
+                    <button disabled>« Предыдущая</button>
                 </li>
             {% endif %}
 
@@ -40,22 +29,11 @@
             {# Next #}
             {% if posts.pagination.next %}
                 <li class="next btn">
-                    <a href="{{ posts.pagination.next.link }}">Next</a>
+                    <a href="{{ posts.pagination.next.link }}">Следующая »</a>
                 </li>
             {% else %}
                 <li class="next btn disabled">
-                    <button disabled>Next</button>
-                </li>
-            {% endif %}
-
-            {# Last #}
-            {% if posts.pagination.pages|last and posts.pagination.pages|last.current != true %}
-                <li class="last btn">
-                    <a href="{{ posts.pagination.pages|last.link }}">Last</a>
-                </li>
-            {% else %}
-                <li class="last btn disabled">
-                    <button disabled>Last</button>
+                    <button disabled>Следующая »</button>
                 </li>
             {% endif %}
 
