--- a/views/base.twig
+++ b/views/base.twig
@@ -9,45 +9,18 @@
 	<body class="{{body_class}}" data-template="base.twig">
 		{{ function('wp_body_open') }}
 
+		{% block header %}
+			{% include 'header.twig' %}
+		{% endblock %}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-		<a class="skip-link screen-reader-text" href="#content">{{ _e( 'Skip to content') }}</a>
-		<header class="header" >
-			{% block header %}
-				<div class="wrapper">
-					<h1 class="hdr-logo" role="banner">
-						<a class="hdr-logo-link" href="{{site.url}}" rel="home">{{site.name}}</a>
-					</h1>
-					<nav id="nav-main" class="nav-main" role="navigation">
-						{% include "menu.twig" with {'items': menu.get_items} %}
-					</nav><!-- #nav -->
-				</div>
-			{% endblock %}
-		</header>
+		{% if fn('is_front_page') %}
+			{% include "slider.twig" %}
+		{% endif %}
 
 		<section id="content" role="main" class="content-wrapper">
-			{% if title %}<h1>{{title}}</h1>{% endif %}
 			<div class="wrapper">
+				{% include "partial/breadcrumbs.twig" %}
+				{% if title %}<h1>{{title}}</h1>{% endif %}
 				{% block content %}
 					Sorry, no content
 				{% endblock %}
@@ -60,9 +33,7 @@
 		</section>
 
 		{% block footer %}
-			<footer id="footer">
-				{% include 'footer.twig' %}
-			</footer>
+			{% include 'footer.twig' %}
 			{{ function('wp_footer') }}
 		{% endblock %}
 	</body>
