--- a/views/page.twig
+++ b/views/page.twig
@@ -4,6 +4,9 @@
 	<div class="content-wrapper">
 		<article class="post-type-{{post.post_type}}" id="post-{{post.ID}}">
 			<section class="article-content">
+				{% if post.thumbnail %}
+					<div class="article-image" style="background-image: url({{ post.thumbnail.src }});"></div>
+				{% endif %}
 				<h1 class="article-h1">{{post.title}}</h1>
 				<div class="article-body">
 					{{post.content}}
