--- a/src/slick-theme.css
+++ b/src/slick-theme.css
@@ -52,9 +52,13 @@
 .slick-prev:before,
 .slick-next:before
 {
-    font-size: 80px;
-    line-height: 80px;
+    font-size: 60px;
+    line-height: 50px;
+    display: block;
+    width: 60px;
+    height: 60px;
     opacity: .75;
+    background: #000044;
     color: #e6e9f9;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -72,10 +76,22 @@
 .slick-prev:before
 {
     content: '‹';
+    -webkit-border-top-right-radius: 999px;
+    -webkit-border-bottom-right-radius: 999px;
+    -moz-border-radius-topright: 999px;
+    -moz-border-radius-bottomright: 999px;
+    border-top-right-radius: 999px;
+    border-bottom-right-radius: 999px;
 }
 [dir='rtl'] .slick-prev:before
 {
     content: '›';
+    -webkit-border-top-left-radius: 999px;
+    -webkit-border-bottom-left-radius: 999px;
+    -moz-border-radius-topleft: 999px;
+    -moz-border-radius-bottomleft: 999px;
+    border-top-left-radius: 999px;
+    border-bottom-left-radius: 999px;
 }
 
 .slick-next
@@ -90,10 +106,22 @@
 .slick-next:before
 {
     content: '›';
+    -webkit-border-top-left-radius: 999px;
+    -webkit-border-bottom-left-radius: 999px;
+    -moz-border-radius-topleft: 999px;
+    -moz-border-radius-bottomleft: 999px;
+    border-top-left-radius: 999px;
+    border-bottom-left-radius: 999px;
 }
 [dir='rtl'] .slick-next:before
 {
     content: '‹';
+    -webkit-border-top-right-radius: 999px;
+    -webkit-border-bottom-right-radius: 999px;
+    -moz-border-radius-topright: 999px;
+    -moz-border-radius-bottomright: 999px;
+    border-top-right-radius: 999px;
+    border-bottom-right-radius: 999px;
 }
 
 /* Dots */
