--- a/views/front-page.twig
+++ b/views/front-page.twig
@@ -4,7 +4,7 @@
 
     <div class="content-wrapper">
         {% for post in front_page %}
-            <article class="post-type-{{post.post_type}}" id="post-{{post.ID}}">
+            <article class="post-type-{{post.post_type}} wow fadeIn" id="post-{{post.ID}}">
                 <section class="article-content">
                     <h1 class="article-h1">{{post.title}}</h1>
                     <div class="article-body">
@@ -16,7 +16,7 @@
 
         {% for post in front_children %}
             {% if post.slug == 'events' %}
-                <article class="post-type-{{post.post_type}}" id="post-{{post.ID}}">
+                <article class="post-type-{{post.post_type}} wow fadeIn" id="post-{{post.ID}}">
                     <section class="artcle-content">
                         <div class="grid grid-cols-2 gap-8 mb-8 p-4 bg-icy_lilac items-center">
                             <h2 class="article-h1 text-left mb-0">{{post.title}}</h2>
@@ -31,7 +31,7 @@
                             <div class="posts_tiles">
                                 {% for tile in front_page_events %}
                                     <div
-                                            class="tile"
+                                            class="tile wow fadeIn"
                                             id="post-{{tile.ID}}"
                                             style="background-image: url('{{tile.thumbnail.src}}');"
                                     >
@@ -51,8 +51,8 @@
                     </section>
                 </article>
             {% else %}
-                {% if post.slug == 'branches' %}
-                    <article class="post-type-{{post.post_type}}" id="post-{{post.ID}}">
+                {% if post.slug == 'branches-section' %}
+                    <article class="post-type-{{post.post_type}} wow fadeIn" id="post-{{post.ID}}">
                         <section class="artcle-content">
                             <div class="grid grid-cols-2 gap-8 mb-8 p-4 bg-icy_lilac items-center">
                                 <h2 class="article-h1 text-left mb-0">{{post.title}}</h2>
@@ -67,7 +67,7 @@
                                 <div class="posts_tiles branches">
                                     {% for tile in branches %}
                                         <div
-                                                class="tile"
+                                                class="tile wow fadeIn"
                                                 id="post-{{tile.ID}}"
                                                 style="background-image: url('{{tile.thumbnail.src}}');"
                                         >
@@ -88,7 +88,7 @@
                     </article>
                 {% else %}
                     {% if post.slug == 'digits' %}
-                        <article class="post-type-{{post.post_type}}" id="post-{{post.ID}}">
+                        <article class="post-type-{{post.post_type}} wow fadeIn" id="post-{{post.ID}}">
                             <section class="article-content">
                                 <h2 class="article-h1">{{post.title}}</h2>
                                 <div class="article-body">
@@ -152,7 +152,7 @@
                             </section>
                         </article>
                     {% else %}
-                        <article class="post-type-{{post.post_type}}" id="post-{{post.ID}}">
+                        <article class="post-type-{{post.post_type}} wow fadeIn" id="post-{{post.ID}}">
                             <section class="article-content">
                                 <h2 class="article-h1">{{post.title}}</h2>
                                 <div class="article-body">
