--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,7 @@ Author: Yury Shibitov (https://shibitov.ru)
 @import "https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Roboto&display=swap";
 @import './slick.css';
 @import './slick-theme.css';
+@import './colorbox.css';
 
 @tailwind base;
 @tailwind components;
@@ -36,19 +37,35 @@ html {
     @apply text-zinc-900 bg-white;
 }
 
+body.no-overflow {
+    @apply overflow-hidden;
+}
+
 .wrapper {
-    @apply w-[95%] mx-auto max-w-7xl
+    @apply w-full px-8 lg:w-[95%] lg:px-0 mx-auto max-w-7xl;
+}
+
+.alignright {
+    @apply block float-none md:float-right md:ml-4 mb-4 mx-auto;
+}
+
+.alignleft {
+    @apply block float-none md:float-left md:mr-4 mb-4 mx-auto;
+}
+
+.emoji {
+    @apply inline-block;
 }
 
 header {
     @apply relative z-50;
 
     .row {
-        @apply py-6 flex items-center justify-between gap-4 relative z-50;
+        @apply py-6 flex items-start lg:items-center justify-between gap-4 relative z-20 flex-col lg:flex-row;
     }
 
     .embl_cont {
-        @apply flex items-center gap-4;
+        @apply flex items-start md:items-center gap-4 flex-col md:flex-row;
 
         .emblem {
             @apply w-52;
@@ -56,11 +73,15 @@ header {
 
         .sub_title {
             @apply font-bold;
+
+            br {
+                @apply hidden md:block;
+            }
         }
     }
 
     .nav-branches {
-        @apply text-white;
+        @apply text-white hidden lg:block;
 
         ul {
             @apply px-8 py-4 relative bg-endless_blue
@@ -109,6 +130,10 @@ header {
 
         .string {
             @apply p-4 flex justify-between items-center gap-2 font-bold bg-endless_blue hover:bg-widowmaker;
+
+            span {
+                @apply hidden xl:inline;
+            }
         }
 
         .square {
@@ -116,23 +141,43 @@ header {
         }
     }
 
+    .hamburger {
+        @apply lg:hidden absolute top-6 right-6 leading-normal bg-endless_blue hover:bg-widowmaker text-white
+        transition-all flex items-center justify-center p-2 z-50
+        overflow-hidden before:content-[''] before:w-6 before:h-6 before:bg-white before:rotate-[45deg]
+        before:absolute before:right-[-0.75rem] before:top-[-0.75rem];
+
+        span {
+            @apply p-2 hidden md:inline;
+        }
+    }
+
     .menu_cont {
-        @apply bg-icy_lilac;
+        @apply bg-icy_lilac relative z-30;
     }
 
     .nav-main {
-        @apply relative bg-endless_blue text-white border-b-4 border-icy_lilac
-        before:content-[''] before:w-6 before:h-6 before:bg-white before:rotate-[45deg]
+        @apply hidden lg:flex bg-endless_blue text-white border-b-4 border-icy_lilac overflow-auto lg:overflow-visible
+        fixed lg:relative top-0 right-0 left-0 bottom-0 items-center justify-center z-40
+        before:hidden lg:before:block before:content-[''] before:w-6 before:h-6 before:bg-white before:rotate-[45deg]
         before:absolute before:right-[-0.75rem] before:top-[-0.75rem];
 
+        .embl_cont {
+            @apply absolute top-6 left-6 w-48 block lg:hidden;
+        }
+
+        .hamburger {
+            @apply bg-white text-endless_blue right-6 flex lg:hidden;
+        }
+
         ul {
-            @apply flex items-center justify-start gap-2 px-4;
+            @apply flex items-center flex-col lg:flex-row justify-between gap-2 px-4 mt-36 lg:mt-0;
 
             li {
                 a {
                     @apply relative uppercase z-20 block p-4 font-bold transition-all after:content-['']
                     after:w-0 after:h-full after:absolute after:bg-widowmaker after:top-0
-                    after:left-0 after:transition-all after:duration-500 after:z-[-1];
+                    after:left-0 after:transition-all after:duration-500 after:z-[-1] text-lg lg:text-sm xl:text-base text-center;
                 }
             }
 
@@ -143,16 +188,20 @@ header {
             }
 
             li.menu-item-has-children {
+                @apply relative;
+                
                 a {
-                    @apply relative block font-bold pl-8 before:absolute before:left-2 before:top-1/2 before:-translate-y-1/2
-                    before:content-['▼'] before:text-widowmaker before:mr-4 before:z-10;
+                    @apply relative block font-bold lg:pl-8 before:absolute before:left-2 before:top-1/2 before:-translate-y-1/2
+                    before:hidden lg:before:block before:content-['▼'] before:text-widowmaker before:mr-4 before:z-10
+                    text-center lg:text-left;
                 }
 
                 ul {
-                    @apply hidden absolute top-full left-0 bg-widowmaker;
+                    @apply block lg:hidden relative lg:absolute lg:top-full lg:left-0 lg:bg-widowmaker mt-0 mb-8 lg:mb-0;
 
                     li a {
-                        @apply pl-4 before:hidden after:hidden text-endless_blue hover:text-white;
+                        @apply p-2 before:hidden after:hidden text-white normal-case lg:uppercase font-normal lg:font-bold
+                        lg:text-endless_blue lg:hover:text-white;
                     }
                 }
             }
@@ -163,12 +212,12 @@ header {
                 }
 
                 ul {
-                    @apply block;
+                    @apply lg:block;
                 }
             }
 
             li.current_page_item {
-                @apply bg-widowmaker text-endless_blue;
+                @apply lg:bg-widowmaker lg:text-endless_blue;
             }
         }
     }
@@ -179,22 +228,29 @@ header {
         @apply relative bg-endless_blue;
 
         .slide_image {
-            @apply absolute z-10 top-0 left-1/2 h-full w-1/2 bg-center bg-cover opacity-80 contrast-75
-            after:content-[''] after:absolute after:top-0 after:left-0 after:w-1/4 after:h-full after:bg-gradient-to-r
-            after:from-endless_blue after:to-transparent after:opacity-50
-            before:content-[''] before:absolute before:top-0 before:right-0 before:w-1/4 before:h-full before:bg-gradient-to-r
-            before:from-transparent before:to-endless_blue before:opacity-50;
+            @apply absolute z-10 top-0 left-0 md:left-1/2 h-full w-full md:w-1/2 bg-center bg-cover md:opacity-80 md:contrast-75 ;
+        }
+
+        .slide_image:before {
+            @apply md:content-[''] absolute top-0 right-0 w-1/4 h-full bg-gradient-to-r
+            from-transparent to-endless_blue opacity-50;
+        }
+
+        .slide_image:after {
+            @apply md:content-[''] absolute top-0 left-0 w-1/4 h-full bg-gradient-to-r
+            from-endless_blue to-transparent opacity-50;
         }
 
         .slide_content {
-            @apply min-h-96 relative z-20 text-white flex flex-col items-start justify-end gap-4 my-8 drop-shadow-2xl;
+            @apply min-h-[100vh] md:min-h-96 relative z-20 text-white flex flex-col items-start justify-end gap-4 md:my-8 drop-shadow-2xl
+            bg-gradient-to-b from-transparent to-endless_blue md:to-transparent w-full md:w-[95%] p-8 pb-16 md:p-0;
 
             .slide_title {
-                @apply w-1/2 min-w-56 font-black text-icy_lilac text-4xl;
+                @apply w-full md:w-1/2 min-w-56 font-black text-icy_lilac text-2xl md:text-3xl lg:text-4xl;
             }
 
             .slide_text {
-                @apply w-1/2 min-w-56 text-lg;
+                @apply w-full md:w-1/2 min-w-56 text-lg;
 
                 p {
                     @apply mb-4;
@@ -205,13 +261,13 @@ header {
                     font-bold drop-shadow-2xl;
                 }
             }
+
+            img {
+                @apply absolute bottom-12 right-20;
+            }
         }
     }
 }
-
-
-
-
 
 .content-wrapper {
     @apply py-8;
@@ -228,8 +284,20 @@ header {
         @apply text-4xl;
     }
 
+    .article-title-with-button {
+        @apply grid grid-cols-1 lg:grid-cols-2 gap-2 lg:gap-8 mb-8 p-4 bg-icy_lilac items-center;
+
+        .article-h1 {
+            @apply mb-0;
+        }
+
+        .title-button {
+            @apply flex justify-center lg:justify-end items-center;
+        }
+    }
+
     .article-h1 {
-        @apply text-4xl font-black text-center p-4 bg-icy_lilac mb-8;
+        @apply text-2xl md:text-3xl lg:text-4xl font-black text-center p-4 bg-icy_lilac mb-8;
     }
 
     .article-h1:empty {
@@ -265,15 +333,15 @@ header {
     }
 
     .wp-block-media-text {
-        @apply grid grid-cols-[1fr_60%] gap-8 items-center;
+        @apply flex flex-col items-start lg:grid lg:grid-cols-[1fr_60%] gap-8 lg:items-center mb-12 lg:mb-0;
     }
 
     .wp-block-media-text.has-media-on-the-right {
-        @apply grid-cols-[60%_1fr];
+        @apply flex flex-col-reverse lg:grid-cols-[60%_1fr];
     }
 
     .digits {
-        @apply grid grid-cols-3 gap-16 items-start my-16;
+        @apply grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-16 items-start my-16;
 
         .digit {
             @apply relative text-center;
@@ -288,6 +356,12 @@ header {
         }
     }
 
+    #post-submit-form {
+        img {
+            @apply hidden lg:block;
+        }
+    }
+
     .submit_form {
         @apply border-widowmaker border-8 p-8 text-center;
 
@@ -295,7 +369,7 @@ header {
             @apply my-8;
 
             p {
-                @apply grid grid-cols-2 gap-8 items-center;
+                @apply grid grid-cols-1 md:grid-cols-2 gap-8 items-center;
 
                 input {
                     @apply border-0 bg-icy_lilac p-4 w-full relative;
@@ -341,7 +415,7 @@ header {
         @apply list-decimal;
     }
 
-    a.btn {
+    .btn {
         @apply inline-block px-8 py-4 bg-widowmaker hover:bg-icy_lilac text-endless_blue
         font-bold drop-shadow no-underline;
     }
@@ -362,21 +436,29 @@ header {
         @apply h-80 bg-center bg-cover;
     }
 
+    .wp-block-columns {
+        @apply flex-col lg:flex-row;
+
+        .wp-block-column {
+
+        }
+    }
+
     .posts_tiles {
-        @apply grid h-auto w-full mt-0 mb-8 mx-auto gap-4 grid-cols-3;
+        @apply grid h-auto w-full mt-0 mb-8 mx-auto gap-4 grid-cols-1 md:grid-cols-2 lg:grid-cols-3;
 
         .tile {
-            @apply relative min-h-[250px] bg-cover text-white grid items-end cursor-pointer
-            bg-center bg-cover bg-no-repeat transition-all opacity-90 hover:opacity-100
+            @apply relative min-h-[400px] lg:min-h-[250px] bg-cover text-white grid items-end cursor-pointer
+            bg-center bg-cover bg-no-repeat transition-all lg:opacity-90 lg:hover:opacity-100
             after:absolute after:z-0 after:top-0 after:left-0 after:content-[''] after:w-full after:h-full
-            after:bg-endless_blue after:opacity-50;
+            after:bg-endless_blue after:opacity-60;
 
             a {
                 @apply w-full h-full absolute z-30 top-0 left-0;
             }
 
             .tile_content {
-                @apply p-8 pt-16 relative z-20 transition-all duration-500;
+                @apply p-8 pt-16 relative z-20 transition-all duration-500 drop-shadow;
 
                 .tile_title {
                     @apply text-white mb-0;
@@ -399,17 +481,27 @@ header {
     }
 
     .branches {
-        @apply grid-cols-4;
+        @apply grid-cols-1 md:grid-cols-2 lg:grid-cols-4;
 
         .tile {
             @apply pt-32;
         }
     }
 
-    .posts_tiles:not(.branches) .tile:first-child {
-        @apply before:content-[''] before:w-[200px] before:h-[65px] before:bg-[url('./static/ld_small_logo.svg')]
-        before:bg-center before:bg-cover before:bg-no-repeat before:relative before:ml-8 before:z-20;
-        grid-area: 1 / 1 / 3 / 2;
+    .posts_tiles:not(.branches) .tile:nth-child(5) {
+        @apply hidden lg:block;
+    }
+
+    @media (min-width: 1024px) {
+        .posts_tiles:not(.branches) .tile:first-child {
+            @apply before:content-[''] before:w-[200px] before:h-[65px] before:bg-[url('./static/ld_small_logo.svg')]
+            before:bg-center before:bg-cover before:bg-no-repeat before:relative before:ml-8 before:z-20;
+            grid-area: 1 / 1 / 3 / 2;
+        }
+    }
+
+    .quote-with-analytics {
+        @apply flex items-center justify-between lg:flex-nowrap flex-wrap gap-8 p-12 bg-endless_blue my-16 mx-0;
     }
 
     img {
@@ -436,13 +528,44 @@ header {
         @apply mb-8;
     }
 
-    .wp-block-gallery.columns-default {
-        @apply grid grid-cols-3 gap-8 items-start;
-
+    .wp-block-gallery {
         .wp-element-caption {
             @apply text-center mt-4;
+
+            a {
+                @apply no-underline;
+            }
         }
     }
+
+    .wp-block-gallery.columns-default {
+        @apply grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 items-start;
+    }
+
+    .wp-block-gallery.columns-2 {
+        @apply grid grid-cols-1 sm:grid-cols-2 gap-8 items-start;
+    }
+
+    .wp-block-gallery.columns-4 {
+        @apply grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8 items-start;
+    }
+
+    .wp-block-gallery.masonry {
+        @apply !block;
+
+        .wp-block-image {
+            @apply w-full sm:w-1/2 md:w-1/3 lg:w-1/4 min-w-52 float-left border-4 border-white box-border;
+        }
+    }
+
+    .table_wrap {
+        @apply overflow-auto;
+    }
+
+    .post-thumbnail {
+        @apply block mx-auto md:float-right md:ml-4 mb-8 md:mr-0 max-w-full h-auto w-96;
+    }
+
 
     .about-block {
         @apply relative my-8 bg-icy_lilac p-8 overflow-hidden before:content-[''] before:w-16 before:h-16 before:bg-white before:rotate-[45deg]
@@ -478,17 +601,76 @@ header {
     }
 }
 
+.page .content-wrapper .wp-block-video {
+    @apply bg-gray-100 p-4;
 
+    video {
+        @apply w-full max-w-[720px] mx-auto;
+    }
+}
 
+.content-wrapper .large-digit {
+    @apply text-9xl -mb-16 relative -z-10 text-widowmaker opacity-50;
+}
 
+.breadcrumbs {
+    @apply p-4 bg-gray-100 text-center;
+}
+
+.teases {
+    @apply grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 items-stretch justify-between gap-x-4 gap-y-12;
+
+    .tease {
+
+        a {
+            @apply no-underline;
+        }
+
+        .tease-thumbnail {
+            @apply aspect-square mb-4 bg-center bg-cover drop-shadow;
+        }
+    }
+}
+
+.pagination-block {
+    @apply bg-gray-100 p-2 mt-8;
+
+    .pagination {
+        @apply flex flex-wrap items-center justify-center gap-2;
+    }
+
+    li {
+        @apply list-none;
+    }
+
+    a, span {
+        @apply py-2 px-3 bg-widowmaker no-underline;
+    }
+
+    a:hover, span.current {
+        @apply bg-endless_blue text-white;
+    }
+
+    span.current {
+        @apply font-black;
+    }
+}
 
 /* Footer */
 
 footer {
     @apply py-8 bg-widowmaker border-t-8 border-icy_lilac;
 
+    .row {
+        @apply grid grid-cols-1 lg:grid-cols-2 gap-4;
+
+        .col {
+            @apply flex flex-col gap-8;
+        }
+    }
+
     .embl_cont {
-        @apply flex items-center gap-4;
+        @apply flex items-center flex-wrap lg:flex-nowrap gap-4;
 
         .emblem {
             @apply w-52;
@@ -518,6 +700,10 @@ footer {
 
         .string {
             @apply p-4 flex justify-between items-center gap-2 font-bold bg-endless_blue;
+
+            span {
+                @apply hidden md:inline-block;
+            }
         }
 
         .square {
@@ -529,10 +715,10 @@ footer {
         @apply relative;
 
         ul {
-            @apply flex items-center justify-start gap-2;
+            @apply flex items-center justify-start gap-2 flex-wrap lg:flex-nowrap;
 
             li {
-                @apply relative bg-endless_blue text-white
+                @apply relative bg-endless_blue text-white overflow-hidden
                 before:content-[''] before:w-6 before:h-6 before:bg-widowmaker before:rotate-[45deg]
                 before:absolute before:right-[-0.75rem] before:top-[-0.75rem];
                 a {
@@ -544,5 +730,14 @@ footer {
 
     p a {
         @apply text-endless_blue font-bold underline hover:no-underline;
+    }
+}
+
+.wa_button {
+    @apply fixed bottom-6 right-6 py-2 px-4 transition-all duration-200 bg-[#57BB63] font-bold flex items-center gap-2
+    drop-shadow text-white text-lg;
+
+    img {
+        @apply inline w-8 h-8;
     }
 }
