--- a/views/archive.twig
+++ b/views/archive.twig
@@ -1,9 +1,17 @@
-{# This file demonstrates using most of the index.twig template and modifying 
-   just a small part. See `search.twig` for an example of another approach #}
-
-{% extends "index.twig" %}
+{#{% extends "index.twig" %}
 
 {% block content %}
-  <h3>Это мой архив</h3>
-  {{ parent() }}
+    {{ parent() }}
+{% endblock %}#}
+
+{% extends "base.twig" %}
+
+{% block content %}
+    <div class="teases">
+        {% for post in posts %}
+            {% include ['tease-'~post.post_type~'.twig', 'tease.twig'] %}
+        {% endfor %}
+    </div>
+
+    {% include 'partial/pagination.twig' with { pagination: posts.pagination({show_all: false, mid_size: 3, end_size: 2}) } %}
 {% endblock %}
