--- a/views/single.twig
+++ b/views/single.twig
@@ -1,39 +1,41 @@
 {% extends "base.twig" %}
 
 {% block content %}
-	<div class="content-wrapper">
-		<article class="post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
-			<img src="{{ post.thumbnail.src|resize(1200, 300) }}">
-			<section class="article-content">
-				<h1 class="article-h1">{{ post.title }}</h1>
-				<a href="{{ post.link }}">{{ _e('edit') }}</a>
-				<p class="blog-author">
-					<span>By</span><a href="{{post.author.path}}"> {{ post.author.name }} </a><span>&bull;</span> <time datetime="{{ post.date|date('Y-m-d H:i:s') }}">{{ post.date }}</time>
-				</p>
-				<div class="article-body">
-					{{post.content}}
-				</div>
-			</section>
-
-			<!-- comment box -->
-			<section class="comment-box">
-				<!-- comments -->
-				<div class="comments">
-				    {% if post.comments %}
-					<h3> comments </h3>
-					{% for cmt in post.comments %}
-					    {% include "comment.twig" with {comment:cmt} %}
-					{% endfor %}
-				    {% endif %}
-				</div>
-
-				{% if post.comment_status == "closed" %}
-					<p> comments for this post are closed </p>
-				{% else %}
-				    <!-- comment form -->
-				    {% include "comment-form.twig" %}
+	<article class="post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
+		<section class="article-content">
+			<h1 class="article-h1">{{ post.title }}</h1>
+			<p class="blog-author">
+				Пост от <time class="text-right" datetime="{{ post.date|date('Y-m-d H:i:s') }}">{{ post.date }}</time>
+			</p>
+			<hr class="mt-2 mb-8">
+			<div class="article-body">
+				{% if not fn('in_category','photo') %}
+					<a href="{{ post.thumbnail.src }}" alt="{{ post.title }}">
+						<img src="{{ post.thumbnail.src('large') }}" class="post-thumbnail">
+					</a>
 				{% endif %}
-			</section>
-		</article>
-	</div><!-- /content-wrapper -->
+				{{post.content}}
+			</div>
+		</section>
+
+		{#<!-- comment box -->
+		<section class="comment-box">
+			<!-- comments -->
+			<div class="comments">
+				{% if post.comments %}
+				<h3> comments </h3>
+				{% for cmt in post.comments %}
+					{% include "comment.twig" with {comment:cmt} %}
+				{% endfor %}
+				{% endif %}
+			</div>
+
+			{% if post.comment_status == "closed" %}
+				<p> comments for this post are closed </p>
+			{% else %}
+				<!-- comment form -->
+				{% include "comment-form.twig" %}
+			{% endif %}
+		</section>#}
+	</article>
 {% endblock %}
