--- a/src/style.css
+++ b/src/style.css
@@ -61,7 +61,7 @@ header {
     @apply relative z-50;
 
     .row {
-        @apply py-6 flex items-start lg:items-center justify-between gap-4 relative z-20 flex-col lg:flex-row;
+        @apply py-6 flex items-start lg:items-center justify-between gap-4 relative z-10 lg:z-50 flex-col lg:flex-row;
     }
 
     .embl_cont {
@@ -242,11 +242,11 @@ header {
         }
 
         .slide_content {
-            @apply min-h-[100vh] md:min-h-96 relative z-20 text-white flex flex-col items-start justify-end gap-4 md:my-8 drop-shadow-2xl
+            @apply min-h-[80vh] md:min-h-96 relative z-20 text-white flex flex-col items-start justify-end gap-4 md:my-8 drop-shadow-2xl
             bg-gradient-to-b from-transparent to-endless_blue md:to-transparent w-full md:w-[95%] p-8 pb-16 md:p-0;
 
             .slide_title {
-                @apply w-full md:w-1/2 min-w-56 font-black text-icy_lilac text-2xl md:text-3xl lg:text-4xl;
+                @apply w-full md:w-1/2 min-w-56 font-black text-icy_lilac text-2xl md:text-3xl lg:text-4xl lg:mt-36;
             }
 
             .slide_text {
@@ -263,7 +263,7 @@ header {
             }
 
             img {
-                @apply absolute bottom-12 right-20;
+                @apply absolute top-12 left-8 lg:left-0;
             }
         }
     }
@@ -288,7 +288,7 @@ header {
         @apply grid grid-cols-1 lg:grid-cols-2 gap-2 lg:gap-8 mb-8 p-4 bg-icy_lilac items-center;
 
         .article-h1 {
-            @apply mb-0;
+            @apply mb-0 text-center lg:text-left;
         }
 
         .title-button {
@@ -337,7 +337,7 @@ header {
     }
 
     .wp-block-media-text.has-media-on-the-right {
-        @apply flex flex-col-reverse lg:grid-cols-[60%_1fr];
+        @apply flex flex-col-reverse lg:grid lg:grid-cols-[60%_1fr];
     }
 
     .digits {
@@ -440,7 +440,7 @@ header {
         @apply flex-col lg:flex-row;
 
         .wp-block-column {
-
+            @apply basis-full lg:basis-auto w-full lg:w-auto;
         }
     }
 
@@ -598,6 +598,14 @@ header {
             @apply bg-endless_blue text-white p-4 relative overflow-hidden before:content-[''] before:w-6 before:h-6
             before:bg-white before:rotate-[45deg] before:absolute before:right-[-0.75rem] before:top-[-0.75rem];
         }
+    }
+
+    iframe {
+        @apply w-full;
+    }
+
+    .clearer {
+        @apply clear-both;
     }
 }
 
